# Inventory-and-Order-Management-System-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  postman_fztpl_domain_task_collection.json  pyproject.toml
alembic/: env.py
alembic/versions/: 20260111_0001_initial.py
app/: database.py  main.py  models.py  schemas.py
app/api/: items.py  orders.py
app/core/: config.py  security.py
app/crud/: item.py  order.py
